tooling/kubernetes/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic-app
  template:
    metadata:
      labels:
        app: petclinic-app
    spec:
      containers:
        - name: petclinic-app
          image: sandalichandrasekara/petclinic-app:latest
