tooling/kubernetes/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: petclinic-app
